# wgpu_bug_minimal

./: Cargo.toml  README.md
src/: camera.rs  main.rs  primitive_renderer.rs  screen_multiplexer.rs  shapes.rs  vertex.rs
src/shaders/: compile.sh  unlit.vert  unlit.vert.spv
