[package]
name = "wgpu_bug_minimal"
version = "0.1.0"
authors = ["Duncan Freeman <dfreeman@lucidyne.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev = "23647d2f50f0e177b93cf09c72886a90702df982" }
iced_winit = { git = "https://github.com/hecrj/iced.git", rev = "23647d2f50f0e177b93cf09c72886a90702df982" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", rev = "23647d2f50f0e177b93cf09c72886a90702df982" }
futures = "0.3"
bytemuck = "1.4"
nalgebra = "0.22"